# coordgenlibs

./: CMakeLists.txt  CoordgenFragmentBuilder.cpp  CoordgenFragmenter.cpp  CoordgenMacrocycleBuilder.cpp  CoordgenMinimizer.cpp  CoordgenTemplates.h  sketcherMaeReading.h  sketcherMinimizer.cpp  sketcherMinimizerAtom.cpp  sketcherMinimizerAtom.h  sketcherMinimizerBendInteraction.h  sketcherMinimizerFragment.cpp  sketcherMinimizerFragment.h  sketcherMinimizerInteraction.h  sketcherMinimizerMaths.h  sketcherMinimizerMolecule.cpp  sketcherMinimizerMolecule.h  sketcherMinimizerRing.cpp  sketcherMinimizerRing.h
cmake/: CoordgenUtils.cmake
example_dir/: CMakeLists.txt
test/: CMakeLists.txt  test_coordgen.cpp
